--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -310,7 +310,7 @@
                             </tbody>
                         </table>
                     </div>
-                    {% include 'common/table/pagination.html' with paginate_list=conventions.paginated_conventions %}
+                    {% include 'common/table/pagination.html' with paginate_list=conventions %}
 
                 {% else %}
                     <p>Aucune convention ne correspond à votre recherche...</p>
