--- a/templates/500.html
+++ b/templates/500.html
@@ -5,7 +5,7 @@
             <div class="fr-grid-row fr-grid-row--gutters">
                 <div class="fr-col-lg-11 fr-col-offset-lg-1 fr-mb-2w">
 
-                    {% if specific_error == 'not_handled_bailleur_prive' %}
+                    {% if exception_type == 'NotHandledBailleurPriveSIAPException' %}
                         <h2 class="fr-mt-3w fr-mt-md-5w fr-mb-5w">Cet fonctionnalité n'est pas encore prise en charge par la plateforme SIAP-APiLos</h2>
                         <p class="fr-mb-3w">
                             Le conventionnement des opérations portées par des bailleurs privés (personnes physiques sans SIREN) n'est pas pris en charge actuellement par la plateforme SIAP-APiLos.<br>
@@ -14,10 +14,15 @@
                         <p class="fr-mb-3w">
                             Nous vous prions de nous excuser pour la gène occasionnée. Si votre besoin est urgent, merci de contacter notre assistance à l'adresse suivante : <a href="mailto:contact@apilos.beta.gouv.fr" target="_blank">contact@apilos.beta.gouv.fr</a>.
                         </p>
-                    {% elif specific_error == 'not_handled_association_hlm' %}
+                    {% elif exception_type == 'AssociationHLMSIAPException' %}
                         <h2 class="fr-mt-3w fr-mt-md-5w fr-mb-5w">Votre habilitation n'est pas prise en charge par le module conventionnement du SIAP (APiLos).</h2>
                         <p class="fr-mb-3w">
                             Le module de conventionnement n'est pas accessible avec l'habilitation « Association HLM ».
+                        </p>
+                    {% elif exception_type == 'NoConventionForOperationSIAPException' %}
+                        <h2 class="fr-mt-3w fr-mt-md-5w fr-mb-5w">Cette opération ne donne pas lieu à un conventionnement.</h2>
+                        <p class="fr-mb-3w">
+                            Les aides de l'opération ne donnent pas lieu à un convention.
                         </p>
                     {% else %}
                         <h2 class="fr-mt-3w fr-mt-md-5w fr-mb-5w">Erreur serveur</h2>
