--- a/templates/conventions/_partial/header.html
+++ b/templates/conventions/_partial/header.html
@@ -4,7 +4,7 @@
             <div class="block--row-strech-1">
                 <h1 class="m-0">Conventions et avenants</h1>
             </div>
-            {% include "./actions.html" %}
+            {% include "./create_action.html" %}
         {% elif request|is_instructeur or request.user.is_superuser %}
             <div class="block--row-strech-1">
                 <h2 class="fr-mb-3w">Bienvenue dans votre espace Instructeur</h2>
