--- a/templates/operations/conventions.html
+++ b/templates/operations/conventions.html
@@ -22,7 +22,7 @@
                     </div>
                 {% endif %}
 
-                {% include "conventions/convention_list.html" with siap_operation=True conventions=conventions %}
+                {% include "conventions/convention_list.html" with siap_operation=True %}
             </div>
         </div>
     </div>
