nouveaux champs "opération" à modifier dans les avenants

--- a/templates/conventions/new_avenant.html
+++ b/templates/conventions/new_avenant.html
@@ -19,6 +19,8 @@
         <div class="fr-container fr-pb-5w">
             {% include "conventions/avenant/bailleur_update_start.html" %}
             <hr>
+            {% include "conventions/avenant/programme_update_start.html" %}
+            <hr>
             {% include "conventions/avenant/logements_update_start.html" %}
             <hr>
             {% include "conventions/avenant/financement_update_start.html" %}
