--- a/templates/conventions/recapitulatif/operation.html
+++ b/templates/conventions/recapitulatif/operation.html
@@ -1,8 +1,8 @@
 {% load custom_filters %}
 
-{% if convention_form_steps|is_a_step:'ConventionProgrammeView' %}
+{% if convention_form_steps|is_a_step:'ConventionProgrammeView' or convention_form_steps|is_a_step:'AvenantProgrammeView' %}
     <div class="fr-grid-row fr-grid-row--gutters fr-mt-1w">
-        <div class="fr-col-12 fr-col-lg-6">
+        <div class="fr-col-12 {%  if not convention.is_avenant %}fr-col-lg-6{% endif %}">
             <div class="fr-card fr-card--no-arrow">
                 <div class="fr-card__body fr-my-2w">
                     <div class="block--row-strech" id="{{object_field}}_div">
@@ -42,60 +42,62 @@
                 </div>
             </div>
         </div>
-        <div class="fr-col-12 fr-col-lg-6">
-            <div class="fr-card fr-card--no-arrow">
-                <div class="fr-card__body fr-my-2w">
-                    <div class="block--row-strech" id="{{object_field}}_div">
-                        <div class="block--row-strech-1">
-                            <h4 class="fr-card__title">
-                                Opération - informations cadastrales
-                            </h4>
+        {%  if not convention.is_avenant %}
+            <div class="fr-col-12 fr-col-lg-6">
+                <div class="fr-card fr-card--no-arrow">
+                    <div class="fr-card__body fr-my-2w">
+                        <div class="block--row-strech" id="{{object_field}}_div">
+                            <div class="block--row-strech-1">
+                                <h4 class="fr-card__title">
+                                    Opération - informations cadastrales
+                                </h4>
+                            </div>
+                            {% if convention|display_convention_form_progressbar  or request.session.is_expert and convention.statut == CONVENTION_STATUT.SIGNEE %}
+                                <a class="fr-link fr-mb-1w" href="{% url 'conventions:cadastre' convention_uuid=convention.uuid %}" >
+                                    <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
+                                </a>
+                            {% endif %}
                         </div>
-                        {% if convention|display_convention_form_progressbar  or request.session.is_expert and convention.statut == CONVENTION_STATUT.SIGNEE %}
-                            <a class="fr-link fr-mb-1w" href="{% url 'conventions:cadastre' convention_uuid=convention.uuid %}" >
-                                <span class="fr-icon-edit-line" aria-hidden="true">Aller à cette étape</span>
-                            </a>
-                        {% endif %}
-                    </div>
-                    <div class="table--limited-height">
-                        {% include "common/display_field_if_exists.html" with label="Numéro de permis construire" value=programme.permis_construire object_field="programme__permis_construire__"|add:programme_uuid %}
-                        {% include "common/display_field_if_exists.html" with label="Date de l'acte notarié" value=programme.date_acte_notarie object_field="programme__date_acte_notarie__"|add:programme_uuid %}
-                        {% if convention.programme.is_foyer or convention.programme.is_residence %}
-                            {% include "common/display_field_if_exists.html" with label="Date d'autorisation hors habitat inclusif" value=programme.date_autorisation_hors_habitat_inclusif object_field="programme__date_autorisation_hors_habitat_inclusif__"|add:programme_uuid %}
-                            {% include "common/display_field_if_exists.html" with label="Date de la convention de location" value=programme.date_convention_location object_field="programme__date_convention_location__"|add:programme_uuid %}
-                            {% if programme.date_residence_argement_gestionnaire_intermediation or programme.date_residence_agrement %}
-                                <hr>
-                            {% endif %}
-                            {% if programme.date_residence_argement_gestionnaire_intermediation %}
-                                <h6>Agrément de gestionnaire ou agrément d'intermédiation</h6>
-                                {% include "common/display_field_if_exists.html" with label="Date" value=programme.date_residence_argement_gestionnaire_intermediation object_field="programme__date_residence_argement_gestionnaire_intermediation__"|add:programme_uuid %}
-                                {% include "common/display_field_if_exists.html" with label="Date" value=programme.ville_signature_residence_agrement_gestionnaire_intermediation object_field="programme__ville_signature_residence_agrement_gestionnaire_intermediation__"|add:programme_uuid %}
-                                {% include "common/display_field_if_exists.html" with label="Date" value=programme.departement_residence_argement_gestionnaire_intermediation object_field="programme__departement_residence_argement_gestionnaire_intermediation__"|add:programme_uuid %}
-                                <hr>
-                            {% endif %}
-                            {% if programme.date_residence_agrement %}
-                                <h6>Agrément prévu à l'article R. 353-156</h6>
-                                {% include "common/display_field_if_exists.html" with label="Date" value=programme.date_residence_agrement object_field="programme__date_residence_agrement__"|add:programme_uuid %}
-                                {% include "common/display_field_if_exists.html" with label="Date" value=programme.departement_residence_agrement object_field="programme__departement_residence_agrement__"|add:programme_uuid %}
-                                <hr>
+                        <div class="table--limited-height">
+                            {% include "common/display_field_if_exists.html" with label="Numéro de permis construire" value=programme.permis_construire object_field="programme__permis_construire__"|add:programme_uuid %}
+                            {% include "common/display_field_if_exists.html" with label="Date de l'acte notarié" value=programme.date_acte_notarie object_field="programme__date_acte_notarie__"|add:programme_uuid %}
+                            {% if convention.programme.is_foyer or convention.programme.is_residence %}
+                                {% include "common/display_field_if_exists.html" with label="Date d'autorisation hors habitat inclusif" value=programme.date_autorisation_hors_habitat_inclusif object_field="programme__date_autorisation_hors_habitat_inclusif__"|add:programme_uuid %}
+                                {% include "common/display_field_if_exists.html" with label="Date de la convention de location" value=programme.date_convention_location object_field="programme__date_convention_location__"|add:programme_uuid %}
+                                {% if programme.date_residence_argement_gestionnaire_intermediation or programme.date_residence_agrement %}
+                                    <hr>
+                                {% endif %}
+                                {% if programme.date_residence_argement_gestionnaire_intermediation %}
+                                    <h6>Agrément de gestionnaire ou agrément d'intermédiation</h6>
+                                    {% include "common/display_field_if_exists.html" with label="Date" value=programme.date_residence_argement_gestionnaire_intermediation object_field="programme__date_residence_argement_gestionnaire_intermediation__"|add:programme_uuid %}
+                                    {% include "common/display_field_if_exists.html" with label="Date" value=programme.ville_signature_residence_agrement_gestionnaire_intermediation object_field="programme__ville_signature_residence_agrement_gestionnaire_intermediation__"|add:programme_uuid %}
+                                    {% include "common/display_field_if_exists.html" with label="Date" value=programme.departement_residence_argement_gestionnaire_intermediation object_field="programme__departement_residence_argement_gestionnaire_intermediation__"|add:programme_uuid %}
+                                    <hr>
+                                {% endif %}
+                                {% if programme.date_residence_agrement %}
+                                    <h6>Agrément prévu à l'article R. 353-156</h6>
+                                    {% include "common/display_field_if_exists.html" with label="Date" value=programme.date_residence_agrement object_field="programme__date_residence_agrement__"|add:programme_uuid %}
+                                    {% include "common/display_field_if_exists.html" with label="Date" value=programme.departement_residence_agrement object_field="programme__departement_residence_agrement__"|add:programme_uuid %}
+                                    <hr>
+                                {% endif %}
+
                             {% endif %}
 
-                        {% endif %}
 
 
-
-                        {% include "common/display_field_if_exists.html" with label="Date d'achat" value=programme.date_achat object_field="programme__date_achat__"|add:programme_uuid %}
-                        {% include "common/display_field_if_exists.html" with label="Date d'achèvement previsible" value=programme.date_achevement_previsible object_field="programme__date_achevement_previsible__"|add:programme_uuid %}
-                        {% include "common/display_field_if_exists.html" with label="Date d'achèvement ou d'obtention de certificat de conformité" value=programme.date_achevement object_field="programme__date_achevement__"|add:programme_uuid %}
-                        {% include "common/display_text_and_files_if_exists.html" with label="Vendeur" text=programme.vendeur|get_text_from_textfiles file_list=programme.vendeur|get_files_from_textfiles object_field="programme__vendeur__"|add:programme_uuid %}
-                        {% include "common/display_text_and_files_if_exists.html" with label="Acquéreur" text=programme.acquereur|get_text_from_textfiles file_list=programme.acquereur|get_files_from_textfiles object_field="programme__acquereur__"|add:programme_uuid %}
-                        {% include "common/display_text_and_files_if_exists.html" with label="Référence du notaire" text=programme.reference_notaire|get_text_from_textfiles file_list=programme.reference_notaire|get_files_from_textfiles object_field="programme__reference_notaire__"|add:programme_uuid %}
-                        {% include "common/display_text_and_files_if_exists.html" with label="Référence de publication de l'acte" text=programme.reference_publication_acte|get_text_from_textfiles file_list=programme.reference_publication_acte|get_files_from_textfiles object_field="programme__reference_publication_acte__"|add:programme_uuid %}
-                        {% include "common/display_text_and_files_if_exists.html" with label="Acte de propriété / Acte notarial" text=programme.acte_de_propriete|get_text_from_textfiles file_list=programme.acte_de_propriete|get_files_from_textfiles object_field="programme__acte_de_propriete__"|add:programme_uuid %}
-                        {% include "common/display_text_and_files_if_exists.html" with label="Certificat d'adressage / Autres" file_list=programme.certificat_adressage|get_files_from_textfiles object_field="programme__certificat_adressage__"|add:programme_uuid %}
+                            {% include "common/display_field_if_exists.html" with label="Date d'achat" value=programme.date_achat object_field="programme__date_achat__"|add:programme_uuid %}
+                            {% include "common/display_field_if_exists.html" with label="Date d'achèvement previsible" value=programme.date_achevement_previsible object_field="programme__date_achevement_previsible__"|add:programme_uuid %}
+                            {% include "common/display_field_if_exists.html" with label="Date d'achèvement ou d'obtention de certificat de conformité" value=programme.date_achevement object_field="programme__date_achevement__"|add:programme_uuid %}
+                            {% include "common/display_text_and_files_if_exists.html" with label="Vendeur" text=programme.vendeur|get_text_from_textfiles file_list=programme.vendeur|get_files_from_textfiles object_field="programme__vendeur__"|add:programme_uuid %}
+                            {% include "common/display_text_and_files_if_exists.html" with label="Acquéreur" text=programme.acquereur|get_text_from_textfiles file_list=programme.acquereur|get_files_from_textfiles object_field="programme__acquereur__"|add:programme_uuid %}
+                            {% include "common/display_text_and_files_if_exists.html" with label="Référence du notaire" text=programme.reference_notaire|get_text_from_textfiles file_list=programme.reference_notaire|get_files_from_textfiles object_field="programme__reference_notaire__"|add:programme_uuid %}
+                            {% include "common/display_text_and_files_if_exists.html" with label="Référence de publication de l'acte" text=programme.reference_publication_acte|get_text_from_textfiles file_list=programme.reference_publication_acte|get_files_from_textfiles object_field="programme__reference_publication_acte__"|add:programme_uuid %}
+                            {% include "common/display_text_and_files_if_exists.html" with label="Acte de propriété / Acte notarial" text=programme.acte_de_propriete|get_text_from_textfiles file_list=programme.acte_de_propriete|get_files_from_textfiles object_field="programme__acte_de_propriete__"|add:programme_uuid %}
+                            {% include "common/display_text_and_files_if_exists.html" with label="Certificat d'adressage / Autres" file_list=programme.certificat_adressage|get_files_from_textfiles object_field="programme__certificat_adressage__"|add:programme_uuid %}
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        {% endif %}
     </div>
 {% endif %}
