--- a/templates/conventions/new_avenant.html
+++ b/templates/conventions/new_avenant.html
@@ -24,6 +24,8 @@
             {% include "conventions/avenant/logements_update_start.html" %}
             <hr>
             {% include "conventions/avenant/financement_update_start.html" %}
+            <hr>
+            {% include "conventions/avenant/champ_libre_start.html" %}
         </div>
     </div>
 {% endblock %}
