--- a/templates/conventions/recapitulatif/champ_libre.html
+++ b/templates/conventions/recapitulatif/champ_libre.html
@@ -14,7 +14,7 @@
                         {% include "conventions/actions/goto.html" %}
                     </div>
                     <div class="table--limited-height">
-                        Pouet
+                        {% include "common/display_textfield_if_exists.html" with value=convention.champ_libre_avenant object_field="convention__champ_libre_avenant__"|add:convention_uuid %}
                     </div>
                 </div>
             </div>
