correction suite à la review de Fabien

--- a/templates/conventions/champ_libre.html
+++ b/templates/conventions/champ_libre.html
@@ -1,8 +1,6 @@
 {% extends "layout/base.html" %}
 
-{% load static %}
-
-{% load custom_filters %}
+{% load static custom_filters %}
 
 {% block page_title %}Informations complémentaires - APiLos{% endblock%}
 
