--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -131,6 +131,7 @@
                     </div>
                     {% include "conventions/actions/type1and2_options.html" %}
                     {% include "conventions/actions/generate_convention.html" %}
+                    {% include "conventions/actions/update_administration.html"%}
                     {% include "conventions/actions/cancel_convention.html"%}
                     {% include "conventions/actions/delete.html"%}
                     {% include "conventions/actions/display_spf_info.html" %}
