--- a/templates/conventions/actions/update_administration.html
+++ b/templates/conventions/actions/update_administration.html
@@ -3,12 +3,12 @@
     <p class="fr-alert__title">Modifier l'administration</p>
     <div class="block--row-strech">
         <div class="block--row-strech-1 fr-mr-6w">
-            <p class="fr-mb-0">La convention peut être annulée. Elle sera encore accessible dans la liste des conventions</p>
+            <p class="fr-mb-0">La convention peut être transférée à une autre administration.</p>
         </div>
         <button class="fr-btn apilos-btn--secondary--red fr-my-1w fr-icon-close-circle-line fr-btn--icon-left"
             name='cancel_convention'
             value="1"
-            data-fr-opened="{% if update_convention_administration_form.errors|length > 1 %}true{% else %}false{% endif %}"
+            data-fr-opened="{% if update_convention_administration_form.errors|length > 0 %}true{% else %}false{% endif %}"
             aria-controls="update-administration-modal">Modifer l'administration</button>
     </div>
 </div>
@@ -36,9 +36,6 @@
                         <p>
                             Pour modifier l'administration, veuillez recopier le mot <strong>TRANSFÉRER</strong> ci-dessous:
                             <form method="post"
-                                {% comment %}
-                                action="{% url 'conventions:validate' convention_uuid=convention.uuid %}"
-                                {% endcomment %}
                                 data-turbo="false"
                             >
                                 {% csrf_token %}
