--- a/templates/common/form/input_select.html
+++ b/templates/common/form/input_select.html
@@ -12,6 +12,7 @@
             class="fr-select {% if form_input.errors %}fr-select--error{% endif %}"
             id="{{form_input.id_for_label}}"
             name="{{form_input.html_name}}"
+            required="{{ form_input.required }}"
             {% include "common/form/disable_form_input.html" %}>
             {% if not without_empty_option %}
                 <option value="" {% if not form_input.value %}selected{% endif %} disabled hidden></option>
@@ -27,10 +28,10 @@
                     </option>
                 {% endfor %}
             {% else %}
-                {% for element in form_input.field.choices %}
-                    <option value="{{element.0}}"
-                        {% if element.0  == form_input.value %}selected{% endif %}>
-                        {{element.1}}
+                {% for value, label in form_input.field.choices %}
+                    <option value="{{ value|safe }}"
+                        {% if value|safe  == form_input.value|safe %}selected{% endif %}>
+                        {{label}}
                     </option>
                 {% endfor %}
             {% endif %}
