--- a/templates/conventions/actions/update_administration.html
+++ b/templates/conventions/actions/update_administration.html
@@ -34,13 +34,14 @@
                             Modifier l'administration
                         </h1>
                         <p>
-                            Pour modifier l'administration, veuillez recopier le mot <strong>TRANSFÉRER</strong> ci-dessous:
+                            Pour modifier l'administration, veuillez recopier le mot <strong>transférer</strong> ci-dessous:
                             <form method="post"
                                 data-turbo="false"
                             >
                                 {% csrf_token %}
                                 {% include "common/form/input_text.html" with form_input=update_convention_administration_form.verification %}
                                 {% include "common/form/input_select.html" with form_input=update_convention_administration_form.administration %}
+                                {{ update_convention_administration_form.convention }}
                             </form>
                         </p>
                     </div>
