Mise à jour de l'UX/UI de soumission à l'instruction : Dans le cas où on n'a pas de numéro d'opération, il est necessaire clarifier l'obligation de reporter le numéro d'opération avant de pouvoir soumettre l'avenant ou la convention à l'instruction

--- a/templates/conventions/actions/edit_numero_galion.html
+++ b/templates/conventions/actions/edit_numero_galion.html
@@ -1,5 +1,5 @@
-<button class="fr-link fr-text--xs" data-fr-opened="false" type="button" aria-controls="fr-modal-update-programme-number">
-    editer le numéro de décision
+<button class="fr-btn fr-btn--secondary" data-fr-opened="false" type="button" aria-controls="fr-modal-update-programme-number">
+    Éditer le numéro de décision
 </button>
 
 {% if programmeNumberForm.errors %}
