--- a/templates/conventions/sent.html
+++ b/templates/conventions/sent.html
@@ -11,6 +11,7 @@
         <div class="fr-container fr-py-5w">
             {% include "conventions/actions/upload_signed_document.html" %}
             {% include "conventions/actions/back_to_instruction.html" %}
+            {% include "conventions/actions/update_administration.html"%}
         </div>
     </div>
 {% endblock %}
