--- a/templates/conventions/actions/update_administration.html
+++ b/templates/conventions/actions/update_administration.html
@@ -1,55 +1,65 @@
 {% load custom_filters %}
-<div class="fr-col-12 fr-mb-5w fr-mt-3w">
-    <p class="fr-alert__title">Modifier l'administration</p>
-    <div class="block--row-strech">
-        <div class="block--row-strech-1 fr-mr-6w">
-            <p class="fr-mb-0">La convention peut être transférée à une autre administration.</p>
+{% if not request|is_bailleur %}
+    {% comment %}
+Si la conditionnelle ci-dessus devait être supprimée, il faudra veiller que la modale
+ci-dessous ne s'ouvre pas par erreur en cas d'ouverture d'une autre modale.
+
+Il en existe en effet une sur le formulaire bailleur pour éditer le numéro d'opération d'une
+convention qui n'en aurait pas encore.
+À l'ouverture de celle-ci, la modale de modification de l'administration s'ouvre accidentellement.
+    {% endcomment %}
+    <div class="fr-col-12 fr-mb-5w fr-mt-3w">
+        <p class="fr-alert__title">Modifier l'administration</p>
+        <div class="block--row-strech">
+            <div class="block--row-strech-1 fr-mr-6w">
+                <p class="fr-mb-0">La convention peut être transférée à une autre administration.</p>
+            </div>
+            <button class="fr-icon-arrow-right-line fr-btn--icon-left fr-btn fr-btn--secondary fr-my-1w"
+                name='cancel_convention'
+                value="1"
+                data-fr-opened="{% if update_convention_administration_form.errors|length > 0 %}true{% else %}false{% endif %}"
+                aria-controls="update-administration-modal">Modifer l'administration</button>
         </div>
-        <button class="fr-btn apilos-btn--secondary--red fr-my-1w fr-icon-close-circle-line fr-btn--icon-left"
-            name='cancel_convention'
-            value="1"
-            data-fr-opened="{% if update_convention_administration_form.errors|length > 0 %}true{% else %}false{% endif %}"
-            aria-controls="update-administration-modal">Modifer l'administration</button>
     </div>
-</div>
-<hr>
-<dialog
-    aria-labelledby="fr-modal-title-modal-1"
-    role="dialog"
-    id="update-administration-modal"
-    class="fr-modal"
->
-    <div class="fr-container fr-container--fluid fr-container-md">
-        <div class="fr-grid-row fr-grid-row--center">
-            <div class="fr-col-12 fr-col-md-8 fr-col-lg-6">
-                <div class="fr-modal__body">
-                    <div class="fr-modal__header">
-                        <button class="fr-link--close fr-link"
-                            title="Fermer la fenêtre modale"
-                            aria-controls="update-administration-modal">Fermer</button>
-                    </div>
-                    <div class="fr-modal__content">
-                        <h1 id="fr-modal-title-modal-1" class="fr-modal__title">
-                            <span class="fr-fi-arrow-right-line fr-fi--lg"></span>
-                            Modifier l'administration
-                        </h1>
-                        <p>
-                            Pour modifier l'administration, veuillez recopier le mot <strong>transférer</strong> ci-dessous:
-                            <form method="post"
-                                data-turbo="false"
-                            >
-                                {% csrf_token %}
-                                {% include "common/form/input_text.html" with form_input=update_convention_administration_form.verification %}
-                                {% include "common/form/input_select.html" with form_input=update_convention_administration_form.administration %}
-                                {{ update_convention_administration_form.convention }}
-                                <button type="submit" class="fr-btn fr-btn--icon-left fr-icon-warning-line">
-                                    Changer définitivement l'administration
-                                </button>
-                            </form>
-                        </p>
+    <hr>
+    <dialog
+        aria-labelledby="fr-modal-title-modal-1"
+        role="dialog"
+        id="update-administration-modal"
+        class="fr-modal"
+    >
+        <div class="fr-container fr-container--fluid fr-container-md">
+            <div class="fr-grid-row fr-grid-row--center">
+                <div class="fr-col-12 fr-col-md-8 fr-col-lg-6">
+                    <div class="fr-modal__body">
+                        <div class="fr-modal__header">
+                            <button class="fr-link--close fr-link"
+                                title="Fermer la fenêtre modale"
+                                aria-controls="update-administration-modal">Fermer</button>
+                        </div>
+                        <div class="fr-modal__content">
+                            <h1 id="fr-modal-title-modal-1" class="fr-modal__title">
+                                <span class="fr-fi-arrow-right-line fr-fi--lg"></span>
+                                Modifier l'administration
+                            </h1>
+                            <p>
+                                Pour modifier l'administration, veuillez recopier le mot <strong>transférer</strong> ci-dessous:
+                                <form method="post"
+                                    data-turbo="false"
+                                >
+                                    {% csrf_token %}
+                                    {% include "common/form/input_text.html" with form_input=update_convention_administration_form.verification editable=True %}
+                                    {% include "common/form/input_select.html" with form_input=update_convention_administration_form.administration editable=True %}
+                                    {{ update_convention_administration_form.convention }}
+                                    <button type="submit" class="fr-btn fr-btn--icon-left fr-icon-warning-line">
+                                        Changer définitivement l'administration
+                                    </button>
+                                </form>
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</dialog>
+    </dialog>
+{% endif %}
